@@ -7,8 +7,6 @@ from .. import util
 machinery = util.import_importlib('importlib.machinery')
 
 
-# XXX find_spec tests
-
 @unittest.skipIf(util.EXTENSIONS.filename is None, '_testcapi not available')
 @util.case_insensitive_tests
 class ExtensionModuleCaseSensitivityTest:
