@@ -16,11 +16,14 @@ class FinderTests:
 
     """Tests for PathFinder."""
 
+    find = None
+    check_found = None
+
     def test_failure(self):
         # Test None returned upon not finding a suitable loader.
         module = '<test module>'
         with util.import_state():
-            self.assertIsNone(self.machinery.PathFinder.find_module(module))
+            self.assertIsNone(self.find(module))
 
     def test_sys_path(self):
         # Test that sys.path is used when 'path' is None.
@@ -30,8 +33,8 @@ class FinderTests:
         importer = util.mock_spec(module)
         with util.import_state(path_importer_cache={path: importer},
                                path=[path]):
-            loader = self.machinery.PathFinder.find_module(module)
-            self.assertIs(loader, importer)
+            found = self.find(module)
+            self.check_found(found, importer)
 
     def test_path(self):
         # Test that 'path' is used when set.
@@ -40,8 +43,8 @@ class FinderTests:
         path = '<test path>'
         importer = util.mock_spec(module)
         with util.import_state(path_importer_cache={path: importer}):
-            loader = self.machinery.PathFinder.find_module(module, [path])
-            self.assertIs(loader, importer)
+            found = self.find(module, [path])
+            self.check_found(found, importer)
 
     def test_empty_list(self):
         # An empty list should not count as asking for sys.path.
@@ -50,7 +53,7 @@ class FinderTests:
         importer = util.mock_spec(module)
         with util.import_state(path_importer_cache={path: importer},
                                path=[path]):
-            self.assertIsNone(self.machinery.PathFinder.find_module('module', []))
+            self.assertIsNone(self.find('module', []))
 
     def test_path_hooks(self):
         # Test that sys.path_hooks is used.
@@ -60,8 +63,8 @@ class FinderTests:
         importer = util.mock_spec(module)
         hook = util.mock_path_hook(path, importer=importer)
         with util.import_state(path_hooks=[hook]):
-            loader = self.machinery.PathFinder.find_module(module, [path])
-            self.assertIs(loader, importer)
+            found = self.find(module, [path])
+            self.check_found(found, importer)
             self.assertIn(path, sys.path_importer_cache)
             self.assertIs(sys.path_importer_cache[path], importer)
 
@@ -73,7 +76,7 @@ class FinderTests:
                                path=[path_entry]):
             with warnings.catch_warnings(record=True) as w:
                 warnings.simplefilter('always')
-                self.assertIsNone(self.machinery.PathFinder.find_module('os'))
+                self.assertIsNone(self.find('os'))
                 self.assertIsNone(sys.path_importer_cache[path_entry])
                 self.assertEqual(len(w), 1)
                 self.assertTrue(issubclass(w[-1].category, ImportWarning))
@@ -85,8 +88,8 @@ class FinderTests:
         importer = util.mock_spec(module)
         hook = util.mock_path_hook(os.getcwd(), importer=importer)
         with util.import_state(path=[path], path_hooks=[hook]):
-            loader = self.machinery.PathFinder.find_module(module)
-            self.assertIs(loader, importer)
+            found = self.find(module)
+            self.check_found(found, importer)
             self.assertIn(os.getcwd(), sys.path_importer_cache)
 
     def test_None_on_sys_path(self):
@@ -182,14 +185,49 @@ class FinderTests:
             self.assertIsNone(self.machinery.PathFinder.find_spec('whatever'))
 
 
+class FindModuleTests(FinderTests):
+    def find(self, *args, **kwargs):
+        return self.machinery.PathFinder.find_module(*args, **kwargs)
+    def check_found(self, found, importer):
+        self.assertIs(found, importer)
 
 
-(Frozen_FinderTests,
- Source_FinderTests
- ) = util.test_both(FinderTests, importlib=importlib, machinery=machinery)
+(Frozen_FindModuleTests,
+ Source_FindModuleTests
+) = util.test_both(FindModuleTests, importlib=importlib, machinery=machinery)
+
+
+class FindSpecTests(FinderTests):
+    def find(self, *args, **kwargs):
+        return self.machinery.PathFinder.find_spec(*args, **kwargs)
+    def check_found(self, found, importer):
+        self.assertIs(found.loader, importer)
+
+
+(Frozen_FindSpecTests,
+ Source_FindSpecTests
+ ) = util.test_both(FindSpecTests, importlib=importlib, machinery=machinery)
 
 
 class PathEntryFinderTests:
+
+    def test_finder_with_failing_find_spec(self):
+        # PathEntryFinder with find_module() defined should work.
+        # Issue #20763.
+        class Finder:
+            path_location = 'test_finder_with_find_module'
+            def __init__(self, path):
+                if path != self.path_location:
+                    raise ImportError
+
+            @staticmethod
+            def find_module(fullname):
+                return None
+
+
+        with util.import_state(path=[Finder.path_location]+sys.path[:],
+                               path_hooks=[Finder]):
+            self.machinery.PathFinder.find_spec('importlib')
 
     def test_finder_with_failing_find_module(self):
         # PathEntryFinder with find_module() defined should work.
@@ -207,7 +245,7 @@ class PathEntryFinderTests:
 
         with util.import_state(path=[Finder.path_location]+sys.path[:],
                                path_hooks=[Finder]):
-            self.machinery.PathFinder.find_spec('importlib')
+            self.machinery.PathFinder.find_module('importlib')
 
 
 (Frozen_PEFTests,
